<resources>
    <string name="app_name">SiFEUP Mobile</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="button_repeat">Repeat</string>
    <string name="lb_unavailable">Unavailable</string>
    <string name="general_error">Oops!\n Something went wrong&#8230; :(</string>
    <string name="error_credential_title">Wrong Credentials</string>
    <string name="error_credential">Please login at FEUP Mobile.</string>
    <string name="error_title">Error</string>
    <string name="msg_downloading">Downloading %1$s</string>
    <string name="msg_download_finished">Finished downloading:\n %1$s</string>
    <string name="toast_download_no_memory">Error: Out of memory!</string>
    <string name="toast_download_no_memory_card">Error: No memory card available.</string>
    <string name="toast_download_error_file">Error while writing the file</string>
    <string name="toast_download_error">Error while downloading file</string>
    <string name="lb_choose_account">Select an account</string>
    <string name="bt_add_account">Add an account</string>
    <string name="title_preferences">Settings</string>
    <string name="lb_sync_preferences">Configure synchronization</string>
    <string name="lb_sync_preferences_sum">Configure period</string>
    <string name="lb_sync_notifications_interval_title">Notifications Refresh Interval</string>
    <string name="lb_sync_interval_title">Refresh Interval</string>
    <string name="key_sync_interval">sync_interval</string>
    <string name="key_notifications_sync_interval">notifications_sync_interval</string>
    <string name="lb_clean_history_title">Clean History</string>
    <string name="lb_clean_history_desc">Clean search history</string>
    <string name="key_clean_history">clean_search_history</string>
    <string name="title_cache_prefs">Cache</string>
    <string name="lb_clear_cache_title">Clear Cache</string>
    <string name="lb_clear_cache_desc">Clear local cache</string>
    <string name="key_clear_cache">clear_cache</string>
    <string-array name="sync_intervals">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>One day</item>
        <item>One week</item>
    </string-array>
    <string-array name="sync_intervals_values">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>168</item>
    </string-array>
    <string name="lb_login_username">Username</string>
    <string name="lb_login_password">Password</string>
    <string name="bt_cancel">Cancel</string>
    <string name="lb_login_authenticating">Authenticating\u2026</string>
    <string name="bt_login">Login</string>
    <string name="lb_show_password">Show Password</string>
    <string name="toast_login_error_empty_username">Username cannot be empty.</string>
    <string name="toast_login_error_empty_password">Password cannot be empty.</string>
    <string name="toast_login_error_wrong_password">Your username or password are wrong.</string>
    <string name="toast_login_error_password_too_short">Password must be at least 8 characters in length.</string>
    <string name="toast_server_error">The Web Service seems to be down. Try again.</string>
    <string name="toast_auth_error">Your password is invalid. Please login again.</string>
    <string name="login_activity_newaccount_text">Sign in to your SiGARRA account.</string>
    <string name="description_logout">Log Out</string>
    <string name="description_search">Search</string>
    <string name="search_label">FEUP Mobile</string>
    <string name="search_hint">Search in SiGARRA</string>
    <string name="title_search">Search</string>
    <string name="title_search_query">Search for \'%1$s\'</string>
    <string name="toast_search_error">There were no results for your search.</string>
    <string name="label_room_desc">%1$s <strong>Floor:</strong>%2$s</string>
    <string name="title_search_students">Students</string>
    <string name="title_search_employees">Employees</string>
    <string name="title_search_rooms">Room</string>
    <string name="title_search_subjects">Subjects</string>
    <string name="bt_about">About</string>
    <string name="bt_about_title">About FEUP Mobile</string>
    <string name="bt_about_message">This application gives FEUP students a mobile platform
                                 where they can track their academic life with ease.
                                 \n\n<a href="https://github.com/ruiaraujo/sifeup-mobile">Project\'s Website</a>                                 \n\n<b>Version: </b>1.1.5
                                 \n
                                 17/01/2013
                                 \n\n<b>Credits:</b>\n<ul><li>Faculty of Engineering of University of Porto</li> \n<li>CICA</li> \n<li>Master in Informatics and Computing Engineering</li> \n<li>Distributed Systems course</li> \n</ul></string>
    <string name="title_student_area">Personal Area</string>
    <string name="btn_student_area">Personal Area</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_schedule_arg">Schedule of %1$s</string>
    <string name="btn_schedule">Schedule</string>
    <string name="description_export_schedule">Export schedule</string>
    <string name="toast_export_calendar_finished">Calendar Exported.</string>
    <string name="toast_export_calendar_error">Failed to find Google Calendar on your device.</string>
    <string name="toast_now_not_visible">Press this button during the workdays to show the current time.</string>
    <string name="description_now">Go to Now</string>
    <string name="description_schedule">See the Schedule</string>
    <string name="label_no_classes">There are no scheduled classes</string>
    <string name="class_subject">&lt;b>Subject:&lt;/b>%1$s</string>
    <string name="class_teacher"><b>Teachers</b></string>
    <string name="class_room"><b>Rooms</b></string>
    <string name="class_classes"><b>Classes</b></string>
    <string name="class_team">&lt;b>Class:&lt;/b>%1$s</string>
    <string name="class_start_time">&lt;b>Start time:&lt;/b>%1$s</string>
    <string name="class_end_time">&lt;b>End time:&lt;/b>%1$s</string>
    <string name="title_exams">Exams</string>
    <string name="btn_exams">Exams</string>
    <string name="title_surveillances">Surveillances</string>
    <string name="label_no_exams">You have no scheduled exams</string>
    <string name="label_no_exam_room">No scheduled rooms</string>
    <string name="date_exam">&lt;b>Date:&lt;/b>%1$s</string>
    <string name="btn_subjects">Subjects</string>
    <string name="title_subjects">Subjects</string>
    <string name="subjects_year">Year %1$s - %2$s</string>
    <string name="lb_no_subjects">You have no subjects inscriptions</string>
    <string name="lb_no_courses">You have no courses inscriptions</string>
    <string name="objectives">Objectives</string>
    <string name="content">Content</string>
    <string name="teachers">Teachers</string>
    <string name="bibliography">Bibliography</string>
    <string name="software">Software</string>
    <string name="metodology">Metodology</string>
    <string name="evaluation">Evaluation</string>
    <string name="admission_exams">Admission to Exams</string>
    <string name="final_grade">Final grade</string>
    <string name="special_evaluation">Special evaluation (TE, DA, &#8230;)</string>
    <string name="improvement_classification">Improvement of Final/Distributed Classification</string>
    <string name="comments">Comments</string>
    <string name="subject_content">Subject Content</string>
    <string name="no_data">No data</string>
    <string name="title_other_occurrences">Other Occurrences</string>
    <string name="lb_no_other_occurrences">There are no other occurrences.</string>
    <string name="title_enrolled_students">Enrolled Students</string>
    <string name="lb_no_enrolled_students">There are no enrolled students.</string>
    <string name="title_teaching_service">Teaching Service</string>
    <string name="lb_no_teaching_service">You have no teaching service.</string>
    <string name="title_academic_path">Academic Path</string>
    <string name="btn_academic_path">Academic Path</string>
    <string name="path_year">&lt;b>Year:&lt;/b>%1$s</string>
    <string name="path_semestre">Semester:%1$s</string>
    <string name="path_average">&lt;b>Average:&lt;/b>%1$s</string>
    <string name="path_grade">Grade: %1$s</string>
    <string name="btn_profile">Profile</string>
    <string name="title_profile">Profile</string>
    <string name="profile_title_email">Email</string>
    <string name="profile_title_email_alt">Alternative Email</string>
    <string name="profile_title_mobile">Mobile Phone</string>
    <string name="profile_title_telephone">Telephone</string>
    <string name="profile_title_ext_mobile">Mobile Phone Extension</string>
    <string name="profile_title_ext_voip">VOIP Extension</string>
    <string name="profile_title_ext_telephone">Telephone Extension</string>
    <string name="profile_title_programme">Programme</string>
    <string name="profile_title_code">Code</string>
    <string name="profile_title_status">Status</string>
    <string name="profile_title_website">Website</string>
    <string name="profile_title_year">Year</string>
    <string name="profile_title_faculty">Faculty</string>
    <string name="profile_title_course">Programme</string>
    <string name="profile_title_room">Room</string>
    <string name="profile_title_interests">Interests</string>
    <string name="profile_choose_email_app">Choose the email application:</string>
    <string name="room_name">&lt;b>Room:&lt;/b> %1$s</string>
    <string name="room_building">&lt;b>Building:&lt;/b> %1$s</string>
    <string name="room_area"> &lt;b>Area:&lt;/b> %1$s m&lt;sup>&lt;small>2&lt;/small>&lt;/sup></string>
    <string name="room_usage">&lt;b>Usage:&lt;/b> %1$s</string>
    <string name="room_responsible"><b>Responsible:</b></string>
    <string name="room_occupiers"><b>Occupiers:</b></string>
    <string name="bt_set_password_confirm">OK</string>
    <string name="bt_set_password_cancel">Cancel</string>
    <string name="lb_new_password">New password:</string>
    <string name="lb_confirm_new_password">Confirm new password:</string>
    <string name="lb_current_password">Current password:</string>
    <string name="set_password_message">Para alterar a sua palavra-passe siga as seguintes normas e 
    preencha os campos a seguir:<ul><il>Conter obrigatoriamente entre 8 e 32 caracteres.</il><il>Não ser igual às 5 palavras-passe anteriores.</il><il>Conter um misto de letras e números.</il><il>Por questões de compatibilidade de sistemas não pode conter símbolos tais como: &amp;, %, $, (, ), /... .</il></ul></string>
    <string name="btn_printing">Printing Quota</string>
    <string name="print_reference_title">Increase Quota</string>
    <string name="lb_print_increase">Value (>1€):</string>
    <string name="btn_print_reference">Generate Reference</string>
    <string name="btn_friends">Friends</string>
    <string name="btn_news">News</string>
    <string name="lb_date">Date: </string>
    <string name="lb_priority">Priority: </string>
    <string name="lb_designation">Designation: </string>
    <string name="lb_subject">Subject: </string>
    <string name="description_browser">See in the Browser</string>
    <string name="bt_search">Search</string>
    <string name="lb_student_code">Code:</string>
    <string name="lb_student_name">Name:</string>
    <string name="lb_student_email">Email:</string>
    <string name="lb_student_first_year">First Year:</string>
	<string name="hint_student_code">Code</string>
    <string name="hint_student_name">Name</string>
    <string name="hint_student_email">Email</string>
    <string name="hint_student_first_year">First Year</string>
</resources>