<external.com.google.android.apps.iosched.ui.widget.DashboardLayout 
  	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_dash1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button android:id="@+id/home_btn_schedule"
        style="@style/DashboardButton"
        android:text="@string/btn_schedule"
        android:drawableTop="@drawable/home_btn_schedule" />
    <Button android:id="@+id/home_btn_exams"
        style="@style/DashboardButton"
        android:text="@string/btn_exams"
        android:drawableTop="@drawable/home_btn_map" />
    <Button android:id="@+id/home_btn_subjects"
        style="@style/DashboardButton"
        android:text="@string/btn_subjects"
        android:drawableTop="@drawable/home_btn_sessions" />
    <Button android:id="@+id/home_btn_academicpath"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home_btn_sessions"
        android:text="@string/btn_academicpath"/>
    <Button android:id="@+id/home_btn_tuition"
    	style="@style/DashboardButton"
        android:drawableTop="@drawable/home_btn_tuition"
        android:text="@string/btn_tuition"/>
    <Button android:id="@+id/home_btn_printing"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home_btn_printer"
        android:text="@string/btn_printing"/>
    <Button android:id="@+id/home_btn_friends"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home_btn_friends"
        android:text="@string/btn_friends"/>
    <Button android:id="@+id/home_btn_news"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/home_btn_news"
        android:text="@string/btn_news"/>   

</external.com.google.android.apps.iosched.ui.widget.DashboardLayout>
