<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_subject_schedule"
        android:icon="@drawable/ic_title_today"
        android:title="@string/description_schedule"
        android:orderInCategory="1"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_other_occurrences"
        android:title="@string/title_other_occurrences"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_enrolled_students"
        android:title="@string/title_enrolled_students"
        android:orderInCategory="2"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_go_to_subject_sigarra"
        android:icon="@drawable/ic_title_export"
        android:title="@string/description_browser"
        android:orderInCategory="3"
        android:showAsAction="ifRoom" />
</menu>
