<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="20.0dp" >

    <LinearLayout
        android:id="@+id/code_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25.0dp"
        android:paddingRight="25.0dp"
        android:paddingTop="20.0dp" >

        <TextView
            android:id="@+id/code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dp"
            android:text="@string/lb_student_code"
            android:textSize="16.0sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_student_code"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25.0dp"
        android:paddingRight="25.0dp"
        android:paddingTop="10.0dp" >

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dp"
            android:text="@string/lb_student_name"
            android:textSize="16.0sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_student_name"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25.0dp"
        android:paddingRight="25.0dp"
        android:paddingTop="10.0dp" >

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dp"
            android:text="@string/lb_student_email"
            android:textSize="16.0sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_student_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/year_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25.0dp"
        android:paddingRight="25.0dp"
        android:paddingTop="10.0dp" >

        <TextView
            android:id="@+id/first_year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4.0dp"
            android:text="@string/lb_student_first_year"
            android:textSize="16.0sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/first_year"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3.0dp"
            android:hint="@string/hint_student_first_year"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20.0dp" >

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8.0dp"
            android:text="@string/bt_search" />
    </LinearLayout>

</LinearLayout>