<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:paddingTop="25.0dp"
>
	<TextView android:id="@+id/set_password_message"
		android:textSize="16.0sp"
		android:textStyle="normal"
	    android:layout_gravity="left|center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/set_password_message" />
	
	<LinearLayout
		android:orientation="vertical"
		android:paddingLeft="25.0dp"
		android:paddingRight="25.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4.0dp"
			android:text="@string/lb_current_password"
			/>
		<EditText
			android:id="@+id/current_password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="Current password"
			android:singleLine="true"
			android:editable="true"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:orientation="vertical"
		android:paddingLeft="25.0dp"
		android:paddingRight="25.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4.0dp"
			android:text="@string/lb_new_password"
			/>
		<EditText
			android:id="@+id/new_password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="New password"
			android:singleLine="true"
			android:editable="true"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:orientation="vertical"
		android:paddingLeft="25.0dp"
		android:paddingRight="25.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4.0dp"
			android:text="@string/lb_confirm_new_password"
			/>
		<EditText
			android:id="@+id/confirm_new_password"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="3.0dp"
			android:hint="New password"
			android:password="true"
			android:singleLine="true"
			android:editable="true"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:orientation="horizontal"
		android:paddingLeft="25.0dp"
		android:paddingTop="20.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/set_password_confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8.0dp"
			android:text="@string/bt_set_password_confirm"
			/>
		<Button
			android:id="@+id/set_password_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8.0dp"
			android:text="@string/bt_set_password_cancel"
			/>
	</LinearLayout>
	
</LinearLayout>
