<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
>
	<LinearLayout
		android:orientation="vertical"
		android:paddingLeft="25.0dp"
		android:paddingRight="25.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4.0dp"
			android:text="@string/lb_login_username"
			>
		</TextView>
		<EditText
			android:id="@+id/login_username"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="User Name"
			android:singleLine="true"
			android:editable="true"
			>
		</EditText>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:paddingLeft="25.0dp"
		android:paddingRight="25.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<TextView
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="4.0dp"
			android:text="@string/lb_login_password"
			>
		</TextView>
		<EditText
			android:id="@+id/login_pass"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="3.0dp"
			android:hint="Password"
			android:password="true"
			android:singleLine="true"
			android:editable="true"
			>
		</EditText>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:paddingLeft="25.0dp"
		android:paddingRight="20.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<CheckBox
			android:id="@+id/login_remember"
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/lb_login_remember"
			>
		</CheckBox>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:paddingLeft="25.0dp"
		android:paddingTop="8.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Button
			android:id="@+id/login_confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8.0dp"
			android:text="@string/bt_login"
			/>
		<Button
			android:id="@+id/login_reset"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8.0dp"
			android:text="@string/bt_reset"
			/>
		<Button
			android:id="@+id/login_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8.0dp"
			android:text="@string/bt_cancel"
			/>
		<Button
			android:id="@+id/login_about"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8.0dp"
			android:text="@string/bt_about"
			/>	
	</LinearLayout>
</LinearLayout>
