<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/SimpleListItem"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/list_selector_background"
    android:orientation="vertical">
    
   	<LinearLayout
		android:orientation="horizontal"
		android:paddingLeft="15.0dp"
		android:paddingRight="15.0dp"
		android:paddingTop="10.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	    <TextView android:id="@+id/notification_lb_subject"
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb_subject"/>
		
	    <TextView android:id="@+id/notification_subject"
	        android:layout_gravity="left|center_vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/ListItemSubtitle"/> 
	         
    </LinearLayout> 
        
    <LinearLayout
		android:orientation="horizontal"
		android:paddingLeft="15.0dp"
		android:paddingRight="15.0dp"
		android:paddingTop="10.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	    <TextView android:id="@+id/notification_lb_date"
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb_date"/>
		
	    <TextView android:id="@+id/notification_date"
	        android:layout_gravity="left|center_vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/ListItemSubtitle"/> 

    </LinearLayout>
    
       
    <LinearLayout
		android:orientation="horizontal"
		android:paddingLeft="15.0dp"
		android:paddingRight="15.0dp"
		android:paddingTop="10.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	    <TextView android:id="@+id/designation_lb_subject"
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:text="@string/lb_designation"/>
		
	    <TextView android:id="@+id/notification_designation"
	        android:layout_gravity="left|center_vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	          style="@style/ListItemSubtitle"/> 
	         
    </LinearLayout>
    
    
   	<LinearLayout
		android:orientation="horizontal"
		android:paddingLeft="15.0dp"
		android:paddingRight="15.0dp"
		android:paddingTop="10.0dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
	    <TextView android:id="@+id/notification_lb_priority"
			android:textSize="16.0sp"
			android:textStyle="normal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/lb_priority"/>
		
	    <TextView android:id="@+id/notification_priority"
	        android:layout_gravity="left|center_vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/ListItemSubtitle"/> 

    </LinearLayout>
    
</LinearLayout>
